--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -27,10 +27,10 @@ jobs:
       - name: build with .Net Core
         run: dotnet build --configuration Release
       - name: Pack with .Net Core
-        run: dotnet pack --no-build --configuration Release --output nuget-packages -p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersionV2 }}.${{ steps.gitversion.outputs.CommitsSinceVersionSourcePadded }}-nightly
+        run: dotnet pack --no-build --configuration Release --output nuget-packages -p:PackageVersion=${{ steps.gitversion.outputs.MajorMinorPatch }}.${{ steps.gitversion.outputs.CommitsSinceVersionSourcePadded }}-nightly
       - uses: actions/upload-artifact@v2
         with:
-          name: Nuget-packages-${{ steps.gitversion.outputs.nuGetVersionV2 }}.${{ steps.gitversion.outputs.CommitsSinceVersionSourcePadded }}-nightly
+          name: Nuget-packages-${{ steps.gitversion.outputs.MajorMinorPatch }}.${{ steps.gitversion.outputs.CommitsSinceVersionSourcePadded }}-nightly
           path: nuget-packages
       - name: Push package to nuget
         run: dotnet nuget push 'nuget-packages/*.nupkg' --api-key ${{ secrets.MYGET_API_KEY }} --source https://www.myget.org/F/paypal-sdk-checkout/api/v3/index.json
