--- a/src/PayPal.Sdk.Checkout/PayPal.Sdk.Checkout.csproj
+++ b/src/PayPal.Sdk.Checkout/PayPal.Sdk.Checkout.csproj
@@ -6,7 +6,9 @@
     <Nullable>enable</Nullable>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Owners>PayPal</Owners>
-    <PackageProjectUrl>https://github.com/aviationexam/PayPal-Checkout-Sdk</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/aviationexam/PayPal.Sdk.Checkout</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/aviationexam/PayPal.Sdk.Checkout</PackageProjectUrl>
     <Title>PayPalCheckoutSdk</Title>
     <Authors>PayPal, Aviationexams</Authors>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
