--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -33,5 +33,5 @@ jobs:
         with:
           name: Nuget-packages-${{ steps.gitversion.outputs.MajorMinorPatch }}.${{ steps.gitversion.outputs.CommitsSinceVersionSourcePadded }}-nightly
           path: nuget-packages
-      - name: Push package to nuget
+      - name: Push package to Myget
         run: dotnet nuget push 'nuget-packages/*.nupkg' --api-key ${{ secrets.MYGET_API_KEY }} --source https://www.myget.org/F/paypal-sdk-checkout/api/v3/index.json
