--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,14 @@ jobs:
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
-      - name: Setup .Net Core 3.1
-        uses: actions/setup-dotnet@v1.9.0
-        with:
-          dotnet-version: '3.1.x'
-      - name: Setup .Net Core 5.0.x
+      - name: Setup .Net 5.0.x
         uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: '5.0.x'
+      - name: Setup .Net 6.0.x
+        uses: actions/setup-dotnet@v1.9.0
+        with:
+          dotnet-version: '6.0.x'
       - uses: actions/checkout@v2.4.0
       - name: Build
         run: dotnet build --configuration Release
@@ -38,15 +38,15 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
       - uses: actions/checkout@v2.4.0
-      - name: Setup .Net Core 3.1.x
-        uses: actions/setup-dotnet@v1.9.0
-        with:
-          dotnet-version: '3.1.x'
-      - name: Setup .Net Core 5.0.x
+      - name: Setup .Net 5.0.x
         uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: '5.0.x'
-      - name: Tool restore with .Net Core
+      - name: Setup .Net 6.0.x
+        uses: actions/setup-dotnet@v1.9.0
+        with:
+          dotnet-version: '6.0.x'
+      - name: Tool restore with .Net
         run: dotnet tool restore
       - name: .Net Format
         run: dotnet format --check -v diag
