Drop direct reference of the dotnet-format

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -7,14 +7,10 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
-      - name: Setup .Net 5.0.x
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: '5.0.x'
       - name: Setup .Net 6.0.x
         uses: actions/setup-dotnet@v2
         with:
