--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,10 @@ on:
 
 jobs:
   unit-test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
-      - name: Setup .Net 5.0.x
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: '5.0.x'
       - name: Setup .Net 6.0.x
         uses: actions/setup-dotnet@v2
         with:
@@ -40,15 +36,9 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
       - uses: actions/checkout@v3
-      - name: Setup .Net 5.0.x
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: '5.0.x'
       - name: Setup .Net 6.0.x
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '6.0.x'
-      - name: Tool restore with .Net
-        run: dotnet tool restore
       - name: .Net Format
         run: dotnet format --no-restore --verify-no-changes -v diag
