--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -11,10 +11,12 @@ jobs:
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
-      - name: Setup .Net 6.0.x
+      - name: Setup .Net
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: |
+            5.0.x
+            6.0.x
       - uses: actions/checkout@v3
       - name: Fetch all history for all tags and branches
         run: git fetch --prune --unshallow
