--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           dotnet-version: |
             5.0.x
-            6.0.x
+            6.0.200
       - uses: actions/checkout@v3
       - name: Retore
         run: dotnet restore --nologo
@@ -34,6 +34,6 @@ jobs:
       - name: Setup .Net 6.0.x
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: '6.0.200'
       - name: .Net Format
         run: dotnet format --no-restore --verify-no-changes -v diag
