Fix nuget source

--- a/nuget.config
+++ b/nuget.config
@@ -19,7 +19,7 @@
         </packageSource>
         -->
 
-        <packageSource key="nuget-feed">
+        <packageSource key="nuget">
             <package pattern="*" />
         </packageSource>
     </packageSourceMapping>
