--- a/src/PayPal.Sdk.Checkout/PayPal.Sdk.Checkout.csproj
+++ b/src/PayPal.Sdk.Checkout/PayPal.Sdk.Checkout.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <PackageReference Include="Aviationexam.GeneratedJsonConverters.SourceGenerator" Version="0.1.18" PrivateAssets="all" />
     <PackageReference Include="GitReader.SourceGenerator" Version="0.1.10" PrivateAssets="all" />
+    <PackageReference Include="Meziantou.Analyzer" Version="2.0.169" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
