--- a/props/PayPal.props
+++ b/props/PayPal.props
@@ -1,5 +1,11 @@
 <Project>
-    <PropertyGroup Condition="'$(Configuration)'=='Release'">
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);MA0002;MA0012;MA0051;MA0061</NoWarn>
+  </PropertyGroup>
+
 </Project>
