--- a/props/PayPal.props
+++ b/props/PayPal.props
@@ -6,6 +6,7 @@
 
   <PropertyGroup>
     <NoWarn>$(NoWarn);MA0002;MA0012;MA0051;MA0061</NoWarn>
+    <WarningsAsErrors>$(WarningsAsErrors);MA0007</WarningsAsErrors>
   </PropertyGroup>
 
 </Project>
