--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -7,6 +7,7 @@ on:
       - synchronize
       - reopened
   merge_group:
+    types: [checks_requested]
 
 jobs:
   unit-test:
@@ -19,6 +20,7 @@ jobs:
         with:
           dotnet-version: |
             8.0.x
+            9.0.x
       - uses: actions/checkout@v4
       - name: Fetch all history for all tags and branches
         run: git fetch --prune --unshallow
@@ -33,9 +35,9 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
     steps:
       - uses: actions/checkout@v4
-      - name: Setup .Net 8.0.x
+      - name: Setup .Net 9.0.x
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '9.0.x'
       - name: .Net Format
         run: dotnet format --no-restore --verify-no-changes -v diag
