--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -29,17 +29,17 @@ jobs:
         uses: gittools/actions/gitversion/execute@v3.1.1
       - run: |
           echo "MajorMinorPatch: ${{ steps.gitversion.outputs.MajorMinorPatch }}"
-          echo "NuGetVersionV2: ${{ steps.gitversion.outputs.NuGetVersionV2 }}"
-          echo "CommitsSinceVersionSourcePadded: ${{ steps.gitversion.outputs.CommitsSinceVersionSourcePadded }}"
+          echo "FullSemVer: ${{ steps.gitversion.outputs.FullSemVer }}"
+          echo "CommitsSinceVersionSource: ${{ steps.gitversion.outputs.CommitsSinceVersionSource }}"
       - name: Restore with .Net
         run: dotnet restore --nologo
       - name: Build with .Net
-        run: dotnet build --configuration Release --no-restore --nologo "-p:Version=${{ steps.gitversion.outputs.NuGetVersionV2 }}"
+        run: dotnet build --configuration Release --no-restore --nologo "-p:Version=${{ steps.gitversion.outputs.FullSemVer }}"
       - name: Pack with .Net
-        run: dotnet pack src/PayPal.Sdk.Checkout/PayPal.Sdk.Checkout.csproj --nologo --no-build --configuration Release --output nuget-packages -p:PackageVersion=${{ steps.gitversion.outputs.NuGetVersionV2 }}
+        run: dotnet pack src/PayPal.Sdk.Checkout/PayPal.Sdk.Checkout.csproj --nologo --no-build --configuration Release --output nuget-packages -p:PackageVersion=${{ steps.gitversion.outputs.FullSemVer }}
       - uses: actions/upload-artifact@v4
         with:
-          name: Nuget-packages-${{ steps.gitversion.outputs.NuGetVersionV2 }}
+          name: Nuget-packages-${{ steps.gitversion.outputs.FullSemVer }}
           path: nuget-packages
       - name: Push package to Myget
         if: ${{ vars.USE_MYGET == 'true' }}
